--- a/visit/Cargo.toml
+++ b/visit/Cargo.toml
@@ -11,4 +11,5 @@ chrono = "0.4"
 futures = "0.3"
 hyper = "0.13"
 redis = "0.15"
+rusqlite = "0.21"
 tokio = { version = "0.2", features = ["full"] }
